Initial implementation of ceilometer-alarm
The implemented use case is raising an alarm (i.e. executing something)
as soon as a cumulative counter is above or below a certain threshold.

The result of the "statistic" during a "period" is compared
to the alarm "threshold" with the operator in "comparaison_operator"
field of the alarm.

The criteria handled to check if the alarm threshold needs to be checked
for a meter are for now only:
- counter_name
- resource_id

When a alarm is triggered a URL is called, same things when the
alarm is untriggered

The URLs are stored in fields "ok_action" and "alarm_action" of the
alarm description.

A api permit to made CRUD operation on the alarm.
This one update the DB and send a rpc message to ceilometer-alarm to
inform it for alarm creation/update/deletion.

This code is latest one for this prototype.
The summit have defined a more convenient way to acheive the alerting.

Change-Id: I2dfebc30a47576e83906a6d4011ce5d52041e901

--- a/etc/ceilometer/ceilometer.conf.sample
+++ b/etc/ceilometer/ceilometer.conf.sample
@@ -69,6 +69,40 @@
 #### (StrOpt) AMQP exchange to connect to if using RabbitMQ or Qpid
 
 
+######## defined in ceilometer.alarm.service ########
+
+# alarm_database_connection=mysql://localhost:3106/ceilometer-alarm
+#### (StrOpt) Alarm Database connection string
+
+######## defined in ceilometer.alarm.storage.sqlalchemy.models ########
+
+# alarm_mysql_engine=InnoDB
+#### (StrOpt) MySQL engine
+
+
+######## defined in ceilometer.alarm.storage.sqlalchemy.session ########
+
+# alarm_sql_connection_debug=0
+#### (IntOpt) Verbosity of SQL debugging information. 0=None,
+####          100=Everything
+
+# alarm_sql_connection_trace=false
+#### (BoolOpt) Add python stack traces to SQL as comment strings
+
+# alarm_sqlite_synchronous=true
+#### (BoolOpt) If passed, use synchronous mode for sqlite
+
+# alarm_sql_idle_timeout=3600
+#### (IntOpt) timeout before idle sql connections are reaped
+
+# alarm_sql_max_retries=10
+#### (IntOpt) maximum db connection retries during startup. (setting -1
+####          implies an infinite retry count)
+
+# alarm_sql_retry_interval=10
+#### (IntOpt) interval between retries of opening a sql connection
+
+
 ######## defined in ceilometer.api ########
 
 # metering_api_port=8777
@@ -301,4 +335,4 @@
 #### (StrOpt) Exchange name for Cinder notifications
 
 
-# Total option count: 72
+# Total option count: 73
