--- a/debian/ceilometer-api.upstart.in
+++ b/debian/ceilometer-api.upstart.in
@@ -14,4 +14,4 @@ pre-start script
 	chown ceilometer:ceilometer /var/lock/ceilometer
 end script
 
-exec su -s /bin/sh -c "exec ceilometer-api -d -v --log-dir=/var/log/ceilometer" ceilometer
+exec start-stop-daemon --start --chuid ceilometer --exec /usr/bin/ceilometer-api -- --log-dir=/var/log/ceilometer
