--- a/debian/ceilometer-collector.upstart.in
+++ b/debian/ceilometer-collector.upstart.in
@@ -2,7 +2,7 @@ description "ceilometer-agent-compute"
 author "Chuck Short <zulcss@ubuntu.com>"
 
 start on runlevel [2345]
-stop on runlelvel [016]
+stop on runlelvel [!2345]
 
 chdir /var/run
 
@@ -14,4 +14,4 @@ pre-start script
 	chown ceilometer:ceilometer /var/lock/ceilometer
 end script
 
-exec su -s /bin/sh -c "exec ceilometer-collector --config-file /etc/nova/nova.conf" ceilometer
+exec start-stop-daemon --start --chuid ceilometer --exec /usr/bin/ceilometer-collector
