--- a/debian/control
+++ b/debian/control
@@ -166,3 +166,18 @@ Description: OpenStack efficient metering counters system - central agent
  overall system.
  .
  This package contains the central agent.
+
+Package: ceilometer-alarm
+Architecture: all
+Pre-Depends: dpkg (>= 1.15.6~)
+Depends: ${ostack-lsb-base}, ceilometer-common (= ${binary:Version}), ${python:Depends},
+ ${misc:Depends}
+Description: OpenStack efficient metering counters system - central agent
+ Ceilometer aims to deliver a Single Point Of Contact for billing systems,
+ providing all the counters they need to establish customer billing, accross
+ all current and future OpenStack components. The delivery of counters must be
+ traceable and auditable, the counters must be easily extensible to support new
+ projects, and agents doing data collections should be independent of the
+ overall system.
+ .
+ This package contains the alerting daemon
