Add alarm migrate configuration
Change-Id: I7a4a1d4c8dabde283e7ba69dc1004ec87e858864

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include AUTHORS
 include ChangeLog
 include ceilometer/storage/sqlalchemy/migrate_repo/migrate.cfg
+include ceilometer/alarm/storage/sqlalchemy/migrate_repo/migrate.cfg
 exclude .gitignore
 exclude .gitreview
 graft tests
