--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 upstream-branch = master
-debian-branch = debian/grizzly
+debian-branch = debian/grizzly-alerting
 upstream-tag = %(version)s
 compression = xz
 
