Consume notif. from multiple message bus
This patch allow to consume notification from multiple
message bus servers at the same times with configuration like:

 [DEFAULT]
 transport_url = rabbit://rabbit-ceilo:5772/

 [notification]
 messaging_urls = rabbit://rabbit-nova1:5772,rabbit-nova2:5772/
 messaging_urls = rabbit://rabbit-cinder:5772/
 messaging_urls = rabbit://rabbit-neutron:5772/

Implements multiple-rabbitmq

Co-Author: Ala Rezmerita <ala.rezmerita@cloudwatt.com>

Change-Id: If3bf6f080ce15f2403c3516b433953b0bdf6ea40

--- a/etc/ceilometer/ceilometer.conf.sample
+++ b/etc/ceilometer/ceilometer.conf.sample
@@ -857,6 +857,11 @@
 # Save event details. (boolean value)
 #store_events=false
 
+# Messaging urls to listen for notifications. example:
+# transport://user:pass@host1:port[,hostN:portN]/virtual_host
+# (DEFAULT/transport_url is used if empty) (multi valued)
+#messaging_urls=
+
 
 [publisher]
 
