Use oslo.msg retry API in rpc publisher
This patch remove the ceilometer hack around rabbitmq configuration
to use the oslo.messaging API to retry rpc connection.

!! Just review, do NOT merge yet !!
Needs https://review.openstack.org/#/c/75365/ before merged
And a new release of oslo.messaging

Closes bug #1244698

Change-Id: I162f2ce7ba7f6644d995dfeef8b0ef5e2727c226

--- a/etc/ceilometer/ceilometer.conf.sample
+++ b/etc/ceilometer/ceilometer.conf.sample
@@ -108,10 +108,6 @@
 # RabbitMQ. (integer value)
 #rabbit_retry_backoff=2
 
-# Maximum number of RabbitMQ connection retries. Default is 0
-# (infinite retry count). (integer value)
-#rabbit_max_retries=0
-
 # Use HA queues in RabbitMQ (x-ha-policy: all). If you change
 # this option, you must wipe the RabbitMQ database. (boolean
 # value)
@@ -192,6 +188,11 @@
 # overridden by an exchange name specified in the
 # transport_url option. (string value)
 #control_exchange=openstack
+
+# Maximum number of transport connection retries. Default is 0
+# (infinite retry count) (integer value)
+# Deprecated group/name - [DEFAULT]/rabbit_max_retries
+#transport_connection_retries=0
 
 
 #
