Permit usage of notifications for metering
This patch introduce a new publisher that use notification intead of
RPC.

Closes bug: #1005933

Change-Id: Idc40c148ef60d5e1349d30c66ba85691d93c5675

--- a/etc/ceilometer/ceilometer.conf.sample
+++ b/etc/ceilometer/ceilometer.conf.sample
@@ -876,10 +876,25 @@
 #metering_secret=change this or be hacked
 
 
+[publisher_notifier]
+
+#
+# Options defined in ceilometer.publisher.messaging
+#
+
+# The topic that ceilometer uses for metering notifications.
+# (string value)
+#metering_topic=metering
+
+# The topic that ceilometer uses for metering notifications.
+# (string value)
+#metering_driver=messagingv2
+
+
 [publisher_rpc]
 
 #
-# Options defined in ceilometer.publisher.rpc
+# Options defined in ceilometer.publisher.messaging
 #
 
 # The topic that ceilometer uses for metering messages.
