Split base connection class
This changes is the first part of split the current storage backend
into 3 storage backends (alarm, collector, event).

Change-Id: I750a8318bea4aafbea4c1467c6fde871e09c618a

--- a/setup.cfg
+++ b/setup.cfg
@@ -134,8 +134,25 @@ ceilometer.poll.central =
     hardware.memory.total = ceilometer.hardware.pollsters.memory:MemoryTotalPollster
     hardware.memory.used = ceilometer.hardware.pollsters.memory:MemoryUsedPollster
 
+ceilometer.alarm.storage =
+    log = ceilometer.storage.impl_log:Connection
+    mongodb = ceilometer.storage.impl_mongodb:Connection
+    mysql = ceilometer.storage.impl_sqlalchemy:Connection
+    postgresql = ceilometer.storage.impl_sqlalchemy:Connection
+    sqlite = ceilometer.storage.impl_sqlalchemy:Connection
+    hbase = ceilometer.storage.impl_hbase:Connection
+    db2 = ceilometer.storage.impl_db2:Connection
 
-ceilometer.storage =
+ceilometer.collector.storage =
+    log = ceilometer.storage.impl_log:Connection
+    mongodb = ceilometer.storage.impl_mongodb:Connection
+    mysql = ceilometer.storage.impl_sqlalchemy:Connection
+    postgresql = ceilometer.storage.impl_sqlalchemy:Connection
+    sqlite = ceilometer.storage.impl_sqlalchemy:Connection
+    hbase = ceilometer.storage.impl_hbase:Connection
+    db2 = ceilometer.storage.impl_db2:Connection
+
+ceilometer.event.storage =
     log = ceilometer.storage.impl_log:Connection
     mongodb = ceilometer.storage.impl_mongodb:Connection
     mysql = ceilometer.storage.impl_sqlalchemy:Connection
